[gd_scene load_steps=4 format=3 uid="uid://b52illmxmocne"]

[ext_resource type="Script" uid="uid://be0qi6obko3ef" path="res://core/autoloads/UIManager.gd" id="1_fux1j"]
[ext_resource type="PackedScene" uid="uid://crl52anlep8fc" path="res://ui/menus/PauseMenu.tscn" id="1_gy8vk"]
[ext_resource type="PackedScene" uid="uid://bmmpmivhigitk" path="res://ui/inventory/InventoryUI.tscn" id="2_t68l2"]

[node name="UiManager" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_fux1j")

[node name="GameHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InventoryUI" parent="." instance=ExtResource("2_t68l2")]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource("1_gy8vk")]
visible = false
